--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: false
 before_install:
   - source <(curl -SLs https://raw.githubusercontent.com/adafruit/travis-ci-arduino/master/install.sh)
 install:
-  - arduino --install-library "TinyGSM"
+  - arduino --install-library "TinyGSM","PubSubClient"
 script:
   - build_main_platforms
 notifications:
